[tool.poetry]
name = "qamod"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qamod", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.13.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"
pydantic = "^2.7.0"
plotly = "^5.20.0"
streamlit = "^1.33.0"
pydub = "^0.25.1"
ffprobe = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
